fix peoples on tablet view

--- a/source/style/03-home-page.css
+++ b/source/style/03-home-page.css
@@ -277,7 +277,7 @@
 
   .peoples {
     height: 24.5em;
-    transform: translate(0, 0) scale(.7);
+    transform: translate(0, -6.6em) scale(.7);
   }
 }
 
